--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body class="body">
     <form action="">
-        <textarea name="intex" class="iptxt" cols="30" rows="10"></textarea>
+        <textarea name="intex" class="iptxt"
+            placeholder="add your numbers here, supports copy/pasting from spreadsheets" cols="30" rows="10"></textarea>
         <button type="submit" id="submit">submit</button>
     </form>
     <pre class="output"></pre>
